--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Michael Kim, Kaggler</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Michael Kim!</h1>
-				<p>I'm best known as a Kaggler from <em>Kaggle</em>. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:mikeskim[at]gmail(dot)com">email</a></li>
-        		<li><a href="https://github.com/mikes-kim">github.com/mikes-kim</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Michael Kim, Kaggler
+---
+<div class="blurb">
+	<h1>Hi there, I'm Michael Kim!</h1>
+	<p>I'm best known as the Kaggler from <em>Kaggle dot com</em>. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
