--- a/about/index.html
+++ b/about/index.html
@@ -1,34 +1,14 @@
 ---
 layout: default
-title: About Hank Quinlan
+title: About Michael Kim
 ---
 
 		<div class="about">
 			<h1>About</h1>
-			<p>You can optionally insert a brief bio here.
-			^
-$$
-\begin{align*}
-  & \phi(x,y) = \phi \left(\sum_{i=1}^n x_ie_i, \sum_{j=1}^n y_je_j \right)
-  = \sum_{i=1}^n \sum_{j=1}^n x_i y_j \phi(e_i, e_j) = \\
-  & (x_1, \ldots, x_n) \left( \begin{array}{ccc}
-      \phi(e_1, e_1) & \cdots & \phi(e_1, e_n) \\
-      \vdots & \ddots & \vdots \\
-      \phi(e_n, e_1) & \cdots & \phi(e_n, e_n)
-    \end{array} \right)
-  \left( \begin{array}{c}
-      y_1 \\
-      \vdots \\
-      y_n
-    \end{array} \right)
-\end{align*}
-$$
-^
-			In your free time you like X, Y, and Z.</p>
+			<p>I do machine learning.</p>
 
 			<ul class="contacts">
-				<li><a href="#">@TwitterHandle</a></li>
-				<li><a href="#">Your Departmental Webpage</a></li>
-				<li><a href="#">Another site you want to link to</a></li>
+				<li><a href="https://www.kaggle.com/mikeskim">Kaggle</a></li>
+				<li><a href="http://www.linkedin.com/pub/mike-kim/b/8ab/12a/">LinkedIn</a></li>
 				</ul>
 		</div>
