--- a/cv/index.html
+++ b/cv/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: CV of Your Name
+title: CV Michael Kim
 ---
 
 	<div class="cv">
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
-					<h1>Hank Quinlan</h1>
+					<h1>Michael Kim</h1>
 					<address>
 					<strong>Affiliation</strong><br>
 					Street Address<br>
