--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Michael Kim, Kaggler
+title: Data Drinks
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Michael Kim!</h1>
-	<p>I'm best known as the Kaggler from <em>Kaggle dot com</em>. <a href="/about">Read more about my life...</a></p>
+	<h1>Data Drinks: Another ML Blog</h1>
+	<p>This just another data science blog regarding my academic research and personal data science pursuits at Kaggle. Some of these logs are in video form at Youtube or Livecoding. Material covered can include interviews with various top 20 Kagglers.  <a href="/about">Read more at ...</a></p>
 </div><!-- /.blurb -->
