--- a/about/index.html
+++ b/about/index.html
@@ -10,5 +10,6 @@ title: About Michael Kim
 			<ul class="contacts">
 				<li><a href="https://www.kaggle.com/mikeskim">Kaggle</a></li>
 				<li><a href="http://www.linkedin.com/pub/mike-kim/b/8ab/12a/">LinkedIn</a></li>
+				<li><a href="https://www.livecoding.tv/mikeskim/">LiveCoding</a></li>
 				</ul>
 		</div>
