--- a/videos/index.html
+++ b/videos/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Mike's blog
+title: Data Drinks Interviews
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
 
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% for vost in site.vosts %}
+	    <li><span>{{ vost.date | date_to_string }}</span> » <a href="{{ vost.url }}" title="{{ vost.title }}">{{ vost.title }}</a></li>
 	  {% endfor %}
 	</ul>
