--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Data Drinks
 ---
 <div class="blurb">
 	<h1>Data Drinks: Another ML Blog</h1>
-	<p>This just another data science blog regarding my academic research and personal data science pursuits at Kaggle. Some of these logs are in video form at Youtube or Livecoding. Material covered can include interviews with various top 20 Kagglers.  <a href="/about"> ...</a></p>
+	<p>This is just another data science blog regarding my academic research and personal data science pursuits at Kaggle. Some of these logs are in video form at Youtube or Livecoding. Material covered can include interviews with various top 20 Kagglers.  <a href="/about"> ...</a></p>
 </div><!-- /.blurb -->
