--- a/videos/index.html
+++ b/videos/index.html
@@ -9,6 +9,9 @@ title: Data Drinks Interviews
 			<ul class="contacts">
 				<li><a href="https://www.youtube.com/watch?v=rgf8zRG38vM">S1E1</a></li>
 				<li><a href="https://www.youtube.com/watch?v=yqVlCUQMbLs">S1E2</a></li>
-				<li><a href="https://www.livecoding.tv/video/icdm2015workshop/">S1E3</a></li>
+				<li><a href="https://www.livecoding.tv/video/icdm2015workshop/">S1E3a</a></li>
+				<li><a href="https://www.youtube.com/watch?v=APmF5Kt2w6I">S1E3b</a></li>
+				<li><a href="https://www.youtube.com/watch?v=iMZ6gELGcEA">S1E3c</a></li>
+				<li><a href="https://www.youtube.com/watch?v=1Um4A_v-Ybc">S1E3d</a></li>
 				</ul>
 		</div>
